improve sample solution